# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  .spec  Dockerfile  README.md  __main__.spec  bookmark.sh  build.sh  iceberg.db  log.html  pyproject.toml  run.sh  tasks.py  test.sh
.github/workflows/: main.yml
src/: .coveragerc  AppLibrary.py  __main__.py  app.db-journal  app.py  bookmark.py  bookmarks_service_sql_integration_debug.py  create.sql  db_connection.py  index.py
src/commands/: command_factory.py  commands.py  commands_import_export.py
src/controllers/: databaseController.py  database_controller.py
src/entities/: bookmark.py
src/gateways/: bookmarks_gateway.py
src/repositories/: app_repository.py  bookmarks_repository.py  tags_repository.py  url_repository.py
src/services/: bookmarks_service.py  bookmarks_service_json.py  bookmarks_service_sql.py  url_validator.py
src/tests/: AppLibrary.py  app.robot  app_test.py  bookmark_test.py  bookmarks_gateway_test.py  bookmarks_repository_test.py  bookmarks_service_json_test.py  bookmarks_service_sql_test.py  bookmarks_service_test.py  command_factory_test.py  command_import_export_test.py  commands_test.py  database_test.py  dummy.js  dummy.json  resource.robot  stub_io_test.py  test.json  test.py  test_delete_command.py  test_edit_command.py  test_search_command.py  test_select.py  test_test.py  test_utils.py  url_validator_test.py
src/tests/robot/: AppLibrary.py  add_command.robot  (+5 more)
src/ui/: app_state.py  app_ui.py  console_formatter.py  console_io.py  screen_io.py  stub_io.py
src/utilities/: test_utils.py
